k8s/web_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: corrector-api
spec:
  selector:
    app: corrector-api
  ports:
  - port: 8000
    targetPort: 8000
